dependencies/charon/charon/tests/ui/filtering/start_from_on_module.rs
//@ known-failure
#[charon::start_from]
mod module {}
